--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -30,3 +30,6 @@ div.dataTables_wrapper div.dataTables_processing {
 .form-control:focus,.bootstrap-select:focus {
     border-color: crimson;
 }
+.bootstrap-table .table a, .fixed-table-body .table a, .table a {
+    border-bottom: none;
+}
